[package]
name = "unin"
description = "a (maintained) library providing integers of nonstandard widths for rust"
version = "0.0.0"
authors = ["superwhiskers <whiskerdev@protonmail.com>"]
repository = "https://github.com/superwhiskers/unin"
readme = "readme.md"
keywords = ["integer", "unaligned", "misaligned"]
categories = ["embedded", "no-std", "data-structures"]
edition = "2018"
license = "Apache-2.0 OR MIT"

[dependencies]
cfg-if = "1"

[dependencies.num-traits]
version = "0.2"
optional = true
default-features = false

[dependencies.serde]
version = "1"
optional = true

[features]
default = ["std"]
nightly = []
std = []
num = ["num-traits"]
use_serde = ["serde"]
